# nxs

./: .gitignore  BENCHMARK.md  CLAUDE.md  GETTING_STARTED.md  LICENSE  MANIFESTO.md  Makefile  README.md  RFC.md  SCENARIOS.md  SPEC.md  docker-compose.yml
.github/workflows/: build-wasm.yml  c.yml  conformance.yml  csharp.yml  fixtures.yml  go.yml  javascript.yml  kotlin.yml  php.yml  publish-c-release.yml  publish-crates.yml  publish-kotlin.yml  publish-npm.yml  publish-nuget.yml  publish-packagist.yml  publish-pypi.yml  publish-rubygems.yml  python.yml  ruby.yml  rust.yml  swift.yml
c/: Makefile  README.md  bench.c  nxs.c  nxs.h  test.c
conformance/: README.md  all_sigils.nxb  bad_dict_hash.nxb  bad_magic.nxb  generate.rs  jumbo_string.nxb  large.nxb  list_f64.nxb  list_i64.nxb  max_keys.nxb  minimal.nxb  nested.nxb  null_vs_absent.nxb  run_c.c  run_go.go  run_js.js  run_kotlin.kt  run_php.php  run_py.py  run_ruby.rb  run_rust.rs  run_swift.swift  sparse.nxb  truncated.nxb  unicode_strings.nxb
csharp/: Bench.cs  ConformanceRunner.cs  NxsReader.cs  Program.cs  README.md  nxs.csproj
docker/: nginx.conf
docs/: RELEASE_TAGS.md
examples/: product_catalog.nxs
go/: README.md  fast.go  go.mod  nxs.go  nxs_test.go  writer.go
go/cmd/bench/: main.go
js/: Dockerfile  README.md  bench.html  bench.js  explorer.html  explorer_worker.js  index.html  nxs.js  nxs_worker.js  package-lock.json  package.json  test.js  ticker.html  wasm.js  workers.html
js/wasm/: README.md  nxs_reducers.c  nxs_reducers.wasm
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/nxs/: Bench.kt  Conformance.kt  NxsReader.kt  NxsWriter.kt  Test.kt
php/: Nxs.php  README.md  composer.json  test.php
php/nxs_ext/: nxs_ext.c
py/: README.md  build_ext.sh  nxs.py  nxs_writer.py  pyproject.toml  test_nxs.py
ruby/: README.md  bench.rb  nexus-standard.gemspec  nxs-format.gemspec  nxs.rb  test.rb
ruby/ext/nxs/: nxs_ext.c
rust/: Cargo.toml  README.md
rust/fuzz/: Cargo.toml
rust/src/: bench.rs  compiler.rs  decoder.rs  error.rs  gen_fixtures.rs  lexer.rs  lib.rs  main.rs  parser.rs  writer.rs
rust/src/convert/: csv_in.rs  csv_out.rs  infer.rs  inspect.rs  json_in.rs  json_out.rs  mod.rs  xml_in.rs
rust/tests/convert/: e2e.rs  json_import.rs
swift/: Package.swift  README.md
swift/Sources/Conformance/: main.swift
swift/Sources/NXS/: NXSReader.swift
swift/Sources/Test/: main.swift
